# drmz_agents

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
config/: morpheus.json
data/txt/: DRMZ Web3 Presents Web3 Is a Joke.txt  DRMZ-Web3.txt  Discover Cardano & Celebreate DRMZ 3 YRS! - Presentation.txt  Scripting smart contracts (IOHK, Feb 2017).txt  a treasury system for cryptocurrencies_enbling better collaborative intelligence.txt  babel fees via limited liabilities (2022).txt  native custom tokens in the eUTXO model - Chakravarty et al (2020).txt
knowledge/: formal-specification-for-a-cardano-wallet-iohk-2018.txt  hydra_fast isomorphic state channels.txt  ouroboros-a-provably-secure-proof-of-stake-blockchain-protocol.txt  proof of stake sidechains (2018).txt  the-extended-utxo-model-chakravarty-et-al-2020.txt  why-we-are-building-cardano-iohk-2017.txt
plan/: plan_ai_tools_in_higher_education.json  plan_cardano_in_education.json  plan_cardano_real_world_adoption.json  plan_web3_in_education.json
src/drmz/: config_loader.py  main.py  morpheus_main.py  morpheus_planner.py  translate_content.py
src/drmz/config/: agents.yaml  tasks.yaml
src/drmz/crews/: __init__.py  content_crew.py  crew.py  crew_executor.py  curriculum_crew.py  guide_creator_crew.py  morpheus_crew.py
src/drmz/flows/: __init__.py  curriculum_creator_flow.py  guide_creator_flow.py
src/drmz/tools/: custom_tool.py
src/drmz_agents/: main.py  morpheus_main.py  morpheus_planner.py  morpheus_task_router.py
src/drmz_agents/config/: agents.yaml  crews.yaml  tasks.yaml
(+8 files in other folders)
