[project]
name = "drmz_agents"
version = "0.1.0"
description = "DRMZ-Agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
drmz_agents = "drmz_agents.main:run"
run_crew = "drmz_agents.main:run"
train = "drmz_agents.main:train"
replay = "drmz_agents.main:replay"
test = "drmz_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
entry_point = "src.drmz_agents.main"
